--- a/launching/Move.toml
+++ b/launching/Move.toml
@@ -6,5 +6,5 @@ version = "0.0.1"
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework", rev = "devnet" }
 
 [addresses]
-base =  "0x0"
+base =  "0xbdc5e81334ecca4e2491c3897fda200f9d1f0262"
 sui =  "0000000000000000000000000000000000000002"
